/*
 * $Id: ChangeLog,v 1.4465 2005/10/15 06:34:43 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-10-15 11:30 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/teamwork.it>
  + source/cgi/include/cgi.ch
  - source/cgi/tini.prg
  - source/cgi/tutil.prg
  * source/cgi/*
    * too many changes to list, almost a rewrite
	 * but now it can be integrated in shared libraries
	 * libcgi should be considered in EXPERIMENTAL state

2005-10-14 23:34 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * utils/xbscript/xbs_harb.ch
    * Removed hard coded symbol numbers
  * utils/xbscript/xbscript.prg
    ! Fixed silly bug introduced yesterday in processing of '='

2005-10-14 20:31 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/vm/hvm.c
    * Minor simplification/optimization of hb_vmBreak()

2005-10-14 19:36 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/rtl/win32ole.prg
    ! Fixed very bad GPF Trap in GETOLEOBJECT()

  * source/rtl/gtnul/gtnul.c
    * Added support for non HB_GT_MULYI compilation.
      /* Przemek can you please review if OK? */

2005-10-14 15:55 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/vm/hvm.c
    ! Fixed GPF Trap in hb_dynsymGet() was assuming that
      (* HB_VM_STACK.pBase) is a symbol.

2005-10-14 13:35 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
  * source/vm/hvm.c
    ! Fixed GPF Trap in hb_vmInit() was calling hb_errInit() before hb_stackInit()
      but hb_errInit() calls hb_dynsymGet( "ERRORNEW" ) which in turn access
     (* HB_VM_STACK.pBase)

2005-10-14 23:00 UTC+0300 Pavel Tsarenko <tpe2@mail.ru>
  * source/rdd/dbfcdx/dbfcdx1.c
  * source/rdd/dbfntx/dbfntx1.c
    * added codepage translation for dbOrderInfo(DBOI_SKIPWILD,,, cPattern)

2005-10-14 08:51 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
  * xharbour/hrbdll.dc
  * xharbour/hrbdll.gc