@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.4465 2005/10/15 06:34:43 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.4466 2005/10/15 09:34:37 lf_sfnet Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,12 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2005-10-15 13:05 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
+  * xharbour/source/rdd/dbfntx/dbfntx1.c
+    ! fixed ordKeyVal() in shared mode
+  * xharbour/source/rtl/langapi.c
+    * added EOL at EOF
 
 2005-10-15 11:30 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/teamwork.it>
   + source/cgi/include/cgi.ch
